--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -10,7 +10,7 @@ development:
       # This defines the name of the default database that Mongoid can connect to.
       # (required).
       #database: yantra_ppl_development
-      database: yantra_ppl_test
+      database: paper_less
       # Provides the hosts the default client can connect to. Must be an array
       # of host:port pairs. (required)
       hosts:
